small css overflow bug

--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -45,6 +45,7 @@ nav > a:hover {
     height: 90%;
     width: 100%;
     margin-top: 5%;
+    overflow-y: scroll;
 }
 
 #msg-container > ul > h1 {
